@@ -1,3 +1,8 @@
+2006-12-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* doc/wm.n, tests/winWm.test:
+	* win/tkWinWm.c: add -transparentcolor attribute for Windows.
+
 2006-12-01  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkTheme.h, generic/ttk/ttkLayout.c:
